fix bug scrollBar in menu

--- a/web/css/jquery.jscrollpane.css
+++ b/web/css/jquery.jscrollpane.css
@@ -45,7 +45,6 @@
 
 .jspTrack
 {
-	background: white;
 	position: relative;
 }
 
