--- a/web/css/main.css
+++ b/web/css/main.css
@@ -67,7 +67,7 @@ body{
 }
 .menu-category{
     margin-top: 25px;
-    margin-right: 8px;
+    height: auto;
 }
 .menu-content{
     height:calc(100% - 60px);
@@ -98,11 +98,14 @@ body{
     height: 50px;
     display: flex;
     padding-left: 40px;
-    padding-right: 35px;
+
     font-size: 18px;
     color: #788399;
     cursor: pointer;
     align-items: center;
+}
+.news-list-title{
+    padding-left: 41px;
 }
 .menu-category-open .category-list-title{
     background-color: #f2f4fd;
@@ -126,15 +129,15 @@ body{
 .news-list-title:before{
     content: url("../img/news-icon.png");
     height: 20px;
-    margin-right: 20px;
+    margin-right: 22px;
 }
 .open-list-btn:after{
     content: url("../img/down-arrow.png");
-    margin-left: 10px;
+    margin-left: 9px;
 }
 .close-list-btn:after{
     content: url("../img/top-arrow.png");
-    margin-left: 10px;
+    margin-left: 9px;
 }
 .menu-category-items{
     display: flex;
